--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@
   margin: 0;
   box-sizing: border-box;
 }
+.hero {
+  height: 100vh;
+  width: 100%;
+  background-image: url('./images/image1.jpg');
+  background-size: cover;
+  background-position: center;
+}
