--- a/style.css
+++ b/style.css
@@ -38,3 +38,16 @@ ul li a {
 ul li a:hover {
   color: #f9004d;
 }
+.btn {
+  background-color: #f9004d;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 10px 25px;
+  border-radius: 30px;
+  transition: transform 0.4s;
+}
+.btn:hover {
+  transform: scale(1.1);
+}
