--- a/style.css
+++ b/style.css
@@ -51,3 +51,25 @@ ul li a:hover {
 .btn:hover {
   transform: scale(1.1);
 }
+.content {
+  position: absolute;
+  top: 40%;
+  left: 8%;
+}
+
+h4 {
+  color: white;
+  font-size: 20px;
+  letter-spacing: 2px;
+}
+h1 {
+  color: white;
+  margin: 20px 0 20px;
+  font-size: 70px;
+}
+
+h3 {
+  color: white;
+  font-size: 25px;
+  margin-bottom: 50px;
+}
